<resources>
    <string name="app_name">SkinSense</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_save">Save</string>
    <string name="title_profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Please insert a picture first\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rescan">Re-Scan</string>
    <string name="back_to_home">Back to Home</string>
    <string name="detail_text"><![CDATA[view more >]]></string>
    <string name="try_now">Try Now!</string>
    <string name="home_description">Detect skin cancer by simply uploading an image.\nReceive analysis results and relevant information about any skin concerns you may have.</string>
    <string name="welcome">Welcome to SkinSense!</string>
    <string name="hallo">Hallo,  </string>
    <string name="username">Username</string>
    <string name="buddies">Buddies</string>
    <string name="name">Buddies</string>
    <string name="email">email</string>
    <string name="phone">+628128374923</string>
    <string name="name_title">Name</string>
    <string name="email_title">Email</string>
    <string name="phone_title">Phone</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t Have Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">password</string>
    <string name="fill_all_fields">Please fill all fields!</string>
    <string name="unknown">Unknown</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_username">Enter username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_email">Enter email</string>
    <string name="registeractivity">RegisterActivity</string>
    <string name="loading">Loading</string>
    <string name="register_success">Register Success!</string>
    <string name="password_mismatch">Password doesn\'t match</string>
    <string name="enter_password">Enter Password</string>
    <string name="save_fragment_title">Saved Scan</string>
</resources>