<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:textColor="@color/md_theme_primary"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:id="@+id/AnimationImg"
        android:layout_width="match_parent"
        android:layout_height="257dp"
        android:src="@drawable/placeholder_image"
        app:layout_constraintTop_toBottomOf="@+id/tvSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SignInEmailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AnimationImg"
        app:startIconDrawable="@drawable/ic_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SignInEmail"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:gravity="center_vertical"
            android:layout_height="50dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SignInPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignInEmailLayout"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_lock"
        app:passwordToggleTint="@color/md_theme_outline"
        android:layout_marginTop="6dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SignInPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="no"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/SignInPasswordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="38dp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/md_theme_onSurfaceVariant"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPassword"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="38dp"
        android:text="@string/sign_in"
        android:textColor="@color/md_theme_onPrimary"
        android:background="@drawable/shape_profile_back"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:elevation="10dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BtnSignIn"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account" />

        <TextView
            android:id="@+id/BtnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="@color/md_theme_onPrimary"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginLeft="4dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>